@@ -10,34 +10,37 @@ require 'cairo'
 width = 200
 height = 200
 
-surface = Cairo::ImageSurface.new(width, height)
-cr = Cairo::Context.new(surface)
+data = nil
+stride = nil
 
-# fill background with white
-cr.set_source_rgba(1.0, 1.0, 1.0, 0.8)
-cr.paint
+Cairo::ImageSurface.new(width, height) do |surface|
+  cr = Cairo::Context.new(surface)
 
-# create shape
-cr.move_to(50, 50)
-cr.curve_to(100, 25, 100, 75, 150, 50)
-cr.line_to(150, 150)
-cr.line_to(50, 150)
-cr.close_path
+  # fill background with white
+  cr.set_source_rgba(1.0, 1.0, 1.0, 0.8)
+  cr.paint
 
-cr.set_source_rgb(0.0, 0.0, 0.0)
-cr.fill_preserve
-cr.set_source_rgb(1.0, 0.0, 0.0)
-cr.set_line_join(Cairo::LINE_JOIN_MITER)
-cr.set_line_width(4)
-cr.stroke
+  # create shape
+  cr.move_to(50, 50)
+  cr.curve_to(100, 25, 100, 75, 150, 50)
+  cr.line_to(150, 150)
+  cr.line_to(50, 150)
+  cr.close_path
 
-cr.target.write_to_png("test.png")
+  cr.set_source_rgb(0.0, 0.0, 0.0)
+  cr.fill_preserve
+  cr.set_source_rgb(1.0, 0.0, 0.0)
+  cr.set_line_join(Cairo::LINE_JOIN_MITER)
+  cr.set_line_width(4)
+  cr.stroke
 
-data = cr.target.data
-stride = cr.target.stride
+  cr.target.write_to_png("test.png")
 
-cr.target.finish
+  data = cr.target.data
+  stride = cr.target.stride
+end
 
-surface = Cairo::ImageSurface.new(data, Cairo::FORMAT_ARGB32,
-                                  width, height, stride)
-surface.write_to_png("test-renew.png")
+Cairo::ImageSurface.new(data, Cairo::FORMAT_ARGB32,
+                        width, height, stride) do |surface|
+  surface.write_to_png("test-renew.png")
+end
