@@ -1,3 +1,11 @@
+2007-04-08  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rb_cairo_surface.c (ensure_finish_proc): supported
+	Cairo::Surface.new with block. If block is exited, a surface is
+	finished automatically.
+
+	* sample/*.rb: followed the above change.
+
 2007-03-10  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.4.1 -> 1.6.0.
